# libircclient

./: CMakeLists.txt
libircclient/src/: colors.c  dcc.c  dcc.h  errors.c  libircclient.c  portable.h  session.h  sockets.c  sockets.h  ssl.c  ssl.h  utils.h
